--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="dest/css/base.min.css">
     <script type="text/javascript" src="dest/js/jquery.min.js"></script>
     <script type="text/javascript" src="dest/js/angular.min.js"></script>
-    <script type="text/javascript" src="dest/js/app.min.js"></script>
+    <script type="text/javascript" src="src/js/app/app.js"></script>
   </head>
 
 <!-- controller as syntax -->
@@ -32,25 +32,28 @@
 
 
   <!-- $scope controller syntax -->
-  <body ng-controller="mainController">
+  <body>
     <h1>{{ 'Hello World!' }}</h1>
 
-  <form role="form" ng-submit="addTodo(todo)">
-      <div>
-        <input type="text" ng-model="todo" placeholder="Add something here" />
-        <span>
-          <input type="submit" value="Add"/>
-        </span>
-      </div>
+    <div class="container" ng-controller="mainController">
 
-<div ui-sortable ng-model="todos">
-    <p class="list-item" ng-repeat="todo in todos track by $index" >
-      <input type="text" ng-model="todo" ng-class="{completed: $scope.todos.completed}"/>
-      <button ng-click="completeTodo(todo)" >&#10003;</button>
-      <button ng-click="removeTodo($index)">X</button>
-    </p>
-</div>
-  </form>
+      <form role="form" ng-submit="addTodo(todo)">
+          <div>
+            <input type="text" ng-model="todo" placeholder="Add something here" />
+            <span>
+              <input type="submit" value="Add"/>
+            </span>
+          </div>
+
+        <div ui-sortable ng-model="todos">
+            <p class="list-item" ng-repeat="todo in todos track by $index" >
+              <input type="text" ng-model="todo" ng-class="{completed: todos.completed}"/>
+              <button ng-click="completeTodo(todo)" >&#10003;</button>
+              <button ng-click="removeTodo($index)">X</button>
+            </p>
+        </div>
+      </form>
+    </div>
 
   </body>
 
