--- a/todos.html
+++ b/todos.html
@@ -1,7 +1,6 @@
 todos:
 
--get controller working
--set up routes for mult pages?
--include bootstrap lib in css/vendors if bootstrap styles are used
--set up angular sortable as module
+-get complete button working
 -add priority drop down; sort by priority?
+-make responsive
+-add description/info/links
