start basic responsive skeleton

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html ng-app="todoApp">
   <head>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    
     <link rel="stylesheet" href="dest/css/base.min.css">
     <script type="text/javascript" src="dest/js/jquery.min.js"></script>
     <script type="text/javascript" src="dest/js/angular.min.js"></script>
