--- a/todos.html
+++ b/todos.html
@@ -1,7 +1,7 @@
 todos:
 
 -get complete button working
--add priority drop down; sort by priority?
--make responsive
+-add sort by priority
+-QA responsiveness
 -add description/info/links
--priorities
+-clean up css
