--- a/todos.html
+++ b/todos.html
@@ -1,6 +1,9 @@
 todos:
 
--add sort by priority
 -QA responsiveness
 -add description/info/links
 -clean up css/js
+
+-make priority required
+-delete correct item when sorted by priority
+
