--- a/todos.html
+++ b/todos.html
@@ -1,9 +1,9 @@
 todos:
 
 -QA responsiveness
--add description/info/links
--clean up css/js
+-clean up js
 
 -make priority required
 -delete correct item when sorted by priority
+-persist sort by priority?
 
