--- a/todos.html
+++ b/todos.html
@@ -1,6 +1,7 @@
 todos:
 
--QA responsiveness
 -clean up js
+-hide/show sort instruction for appropriate desktop/mobile view
+-disable draggability on mobile
 
 
