add title tag & favicon

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html ng-app="todoApp">
   <head>
+    <title>A Simple Todo List App</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta name="description" content="This is a simple todo list app built by Alexandra Hoefinger, using AngularJS, gulp.js, and Sass">
 
     <link rel="stylesheet" href="dest/css/base.min.css">
-
+    <link rel="icon" type="image/png" href="http://i.imgur.com/bsI3IOt.png">
+    
     <script type="text/javascript" src="dest/js/jquery.min.js"></script>
     <script type="text/javascript" src="dest/js/angular.min.js"></script>
     <script type="text/javascript" src="src/js/app/app.js"></script>
