--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <div class="container" ng-controller="mainController">
       <h1>{{date}}</h1>
       <h1>{{time}}</h1>
+      <div ng-if="temp !== undefined">
+        <h1>{{temp}}&deg;F</h1>
+        <h1>near {{location}}</h1>
+      </div>
 
       <form role="form" ng-submit="addTodo(todo)">
         <input class="input-field" type="text" ng-model="todo.item" placeholder="What's on your todo list?" required/>
