add loading icon for weather

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
   </head>
 
   <body>
+    
     <div class="container">
-      <ng-include src="'./app/views/partials/dashboardData.html'"></ng-include>
-      <ng-include src="'./app/views/partials/todoList.html'"></ng-include>
+      <ng-include src="'./app/views/dashboardData.html'"></ng-include>
+      <ng-include src="'./app/views/todoList.html'"></ng-include>
     </div>
 
     <footer ng-init="isOpen = false">
