get app js file compilation working in gulp task & restructure directories

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./styles/dest/base.min.css">
     <link rel="icon" type="image/png" href="http://i.imgur.com/bsI3IOt.png">
     
-    <script type="text/javascript" src="./libraries/dest/jquery.min.js"></script>
-    <script type="text/javascript" src="./libraries/dest/angular.min.js"></script>
-    <script type="text/javascript" src="./app/app.js"></script>
+    <script type="text/javascript" src="./build/jquery.min.js"></script>
+    <script type="text/javascript" src="./build/angular.min.js"></script>
+    <script type="text/javascript" src="./build/app.js"></script>
   </head>
 
   <body>
